# muvera-py-numba

./: .gitignore  BENCHMARK.md  CHANGES.md  README.md  fde_generator_numba.py  pyproject.toml
benchmarks/: benchmark_fde.py
tests/: test_fde_equivalence.py
