[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muvera-numba"
version = "0.1.0"
description = "Numba-optimized Fixed Dimensional Encoding generator based on muvera-py"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "numba",
]

keywords = ["numba", "numpy", "fde", "fixed-dimensional-encoding", "muvera", "embeddings"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["fde_generator", "fde_generator_numba"]
